evert "Adjusted use of threads"
This reverts commit 26af9e37cfd3a1c3aaa5553a346cadb42436191c.

reverted thread changes